<resources>
    <string name="app_name">ReflexChecker</string>
    <string name="instructions">This App tests your reflexes. After you press the Start button you are represented with two tasks and a scrollable view that contains alternating images and checkboxes. When finished the tasks, click the Done button.</string>
    <string name="start">Start</string>
    <string name="task_1">Task 1:</string>
    <string name="task_2">Task 2:</string>
    <string name="image_spacer">Image spacer</string>
    <string name="checkbox1_text">checkbox1_text</string>
    <string name="checkbox2_text">checkbox2_text</string>
    <string name="checkbox3_text">checkbox3_text</string>
    <string name="done">Done</string>

    <string-array name="task1_descriptions">
        <item>Select all drink</item>
        <item>Deselect all drinks</item>
        <item>Select one drink</item>
    </string-array>

    <string-array name="task2_descriptions">
        <item>Select all fruits</item>
        <item>Deselect all fruits</item>
        <item>Select one fruit</item>
    </string-array>

    <string-array name="drinks">
        <item>Coffee</item>
        <item>Tea</item>
        <item>Orange Juice</item>
        <item>Apple Juice</item>
        <item>Soda</item>
        <item>Water</item>
    </string-array>

    <string-array name="fruits">
        <item>Apple</item>
        <item>Banana</item>
        <item>Orange</item>
        <item>Grapefruit</item>
        <item>Pineapple</item>
        <item>Mango</item>
    </string-array>

    <string name="elapsed_time_text">Elapsed time: %d seconds</string>
    <string name="elapsed_time_placeholder">Elapsed time: %d seconds</string>
    <string name="elapsed_time">Elapsed time: %02d seconds</string>

</resources>